--- a/src/templates/one_post.html
+++ b/src/templates/one_post.html
@@ -2,7 +2,7 @@
 	<h2>{{ post['title'] }}</h2>
 </div>
 <div class="post-body">
-	{{ post['body'] }}
+	{% raw post['body'] %}
 </div>
 <div class="post-meta">
 	Posted: {{ post['timestamp'].strftime("%B %d, %Y") }} by {{ post['author'] }} <br />
