--- a/src/templates/one_post.html
+++ b/src/templates/one_post.html
@@ -1,9 +1,6 @@
-<div class="post-title">
-	<h2>{{ post['title'] }}</h2>
-</div>
-<div class="post-body">
+<article>
+	<h2><a href="/post/{{ post['slug'] }}">{{ post['title'] }}</a></h2>
 	{% raw post['body'] %}
-</div>
 <div class="post-meta">
 	Posted: {{ post['timestamp'].strftime("%B %d, %Y") }} by {{ post['author'] }} <br />
 	Tags:
@@ -13,3 +10,4 @@
 		{% end %}
 	</span>
 </div>
+</article>
