--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -8,7 +8,8 @@ Username:
 <input type="password" name="password" value="" />
 </p>
 <p class="submit">
-<input type="submit" name="commit" value="Login">
+<input type="submit" name="commit" value="Login" />
 </p>
+{% raw xsrf_form_html() %}
 </form>
 {% end %}
